feat(#6): [UI] add feedback layout

--- a/pages/camera/camera.wxss
+++ b/pages/camera/camera.wxss
@@ -17,5 +17,5 @@
 .submit-btn {
   margin-top: 20rpx;
   color: white !important;
-  background-color: green !important;
+  background-color: #1AAD5E !important;
 }
